Fixed:Right alignment issue

--- a/src/blocks/blockquote/style.scss
+++ b/src/blocks/blockquote/style.scss
@@ -235,6 +235,10 @@
 	    flex-direction: row-reverse;
 	}
 
+	.uagb-quote__align-right .uagb-quote__author-wrap.uagb-quote__author-at-right {
+	    text-align: right;
+	}
+
 	.uagb-quote__author-wrap.uagb-quote__author-at-right .uagb-quote__author-image img{
     	margin-left:10px;
     	margin-right:0;
